# tree

./: .gitignore  README.md  package.xml  setup.cfg  setup.py  shared_robot_sdk.py
config/blackboard/: blackboard.json
config/motion/gait_arm/: smplx.csv
config/tree/box/: move_box_full_direct_grasp_place_memory.json  move_box_full_direct_grasp_place_turn.json
config/tree/demo/: move_arm_repeat_until_enter_demo.json  move_arm_target_pose_from_blackboard_demo.json  move_arm_target_pose_from_params_demo.json  move_box_arms_pose_common_test_cn.json  move_box_return_to_grasp_ready_common_test_cn.json  move_box_return_torso_restore_pitch_wait_done_test_cn.json  move_claw_test.json  move_torso_and_arms_pose_source_test_cn.json  move_torso_pose_common_test_cn.json  move_torso_pose_test.json  py_tree.json  py_tree_complex.json
config/tree/grasp_object/: move_right_arm_to_grasp.json
config/tree/http/: move_and_grab_http.json  move_and_put_down_http.json  (+2 more)
launch/: run.launch.py
resource/: mercurytree
tests/: test_cli.py
tree/: __init__.py  constants.py  main.py
tree/core/: __init__.py  blackboard_bootstrap.py  cli.py  manual_input.py  runner.py  runner_config.py  tree_factory.py
tree/node/: __init__.py  base.py
tree/ros_interface/: __init__.py  factory.py
tree/runtime/: __init__.py
tree/tools/: __init__.py  manual_result_sender.py  mock_http_server.py
tree/utils/: __init__.py  arm_target.py  box_map_polygon.py  geometry.py  params.py
tree/visualization/: __init__.py  ros_viewer.py  snapshot.py  tree_json_vis.py  web_viewer.py
(+136 files in other folders)
