<?xml version="1.0"?>
<package format="3">
  <name>mercurytree</name>
  <version>0.1.0</version>
  <description>ROS 2 Jazzy behaviour tree demo package built with py_trees.</description>

  <maintainer email="ysd@example.com">ysd</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>py_trees</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>
  <exec_depend>py_trees_ros_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-pydot</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
